...
        const alert = UIAlertController.alertControllerWithTitleMessagePreferredStyle(
          null as unknown as string,
          String(message ?? ''),
          UIAlertControllerStyle.Alert
        );
        alert.addAction(
          UIAlertAction.actionWithTitleStyleHandler('OK', UIAlertActionStyle.Default, () => completionHandler())
        );
        present(alert);
      });
    }

    webViewRunJavaScriptConfirmPanelWithMessageInitiatedByFrameCompletionHandler(
...
        const alert = UIAlertController.alertControllerWithTitleMessagePreferredStyle(
          null as unknown as string,
          String(message ?? ''),
          UIAlertControllerStyle.Alert
        );
        alert.addAction(
          UIAlertAction.actionWithTitleStyleHandler('Cancel', UIAlertActionStyle.Cancel, () =>
            completionHandler(false)
          )
        );
        alert.addAction(
          UIAlertAction.actionWithTitleStyleHandler('OK', UIAlertActionStyle.Default, () => completionHandler(true))
        );
...
